--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 repositories {
@@ -10,15 +11,33 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+group 'org.example'
+version '1.0-SNAPSHOT'
+
 dependencies {
     testImplementation (
             "com.codeborne:selenide:6.9.0",
             "org.junit.jupiter:junit-jupiter:5.8.2",
-            "org.slf4j:slf4j-simple:1.7.29",
-            "com.github.javafaker:javafaker:1.0.2"
+            "org.slf4j:slf4j-simple:2.0.6",
+            "com.github.javafaker:javafaker:1.0.2",
+            'io.qameta.allure:allure-selenide:2.20.1'
     )
 }
 
 test {
     useJUnitPlatform()
+}
+
+allure {
+    report {
+        version.set("2.20.1")
+    }
+    adapter { // отвечает за появление папочки build/allure-results
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 { //название фреймворка
+                adapterVersion.set("2.20.1") //версия интеграции фреймворка и Allure
+            }
+        }
+    }
 }
