--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ allure {
     }
 }
 
+tasks.withType(Test) {
+    systemProperties(System.getProperties())
+}
+
 task remote_test(type: Test) {
     useJUnitPlatform {
         includeTags("remote")
